# 5S

./: .gitignore  CLAUDE.md  PQ-000.00 (FORMATAÇÃO ATUALIZADA) - FAZER A CÓPIA DESSE MODELO.docx  PQ-001.03 CONTROLE DE INFORMAÇÃO DOCUMENTADA.docx  docker-compose.yml  iniciar.bat  iniciar.sh  setup.bat  setup.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_standardized_coding.py  003_master_list.py  004_multi_approver.py  005_document_templates.py  006_text_reviews.py  007_template_docx_path.py  008_change_summary.py  009_iso_compliance_fields.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  ai_usage_log.py  analysis.py  approval.py  changelog.py  config.py  distribution.py  document.py  master_list.py  template.py  text_review.py  version.py  workflow.py
backend/app/routers/: admin.py  ai_routes.py  approval.py  audit_report.py  bulk_import.py  distribution.py  documents.py  export.py  master_list.py  templates.py  workflow.py
backend/app/schemas/: analysis.py  approval.py  bulk_import.py  changelog.py  config.py  distribution.py  documents.py  master_list.py  template.py  text_review.py  versions.py  workflow.py
backend/app/services/: ai_service.py  approval_service.py  bulk_import_service.py  coding_service.py  document_generator.py  document_parser.py  document_service.py  master_list_service.py  template_service.py  versioning_service.py  workflow_service.py
backend/app/services/ai_agents/: analysis_agent.py  changelog_agent.py  (+4 more)
(+43 files in other folders)
